--- a/HW10/online_store/app/views/layouts/application.html.erb
+++ b/HW10/online_store/app/views/layouts/application.html.erb
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta content='true' name='HandheldFriendly'/>
+    <meta content='width' name='MobileOptimized'/>
+    <meta content='yes' name='apple-mobile-web-app-capable'/>
     <title>OnlineStore</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <meta name="theme-color" content="#712cf9">
   </head>
 
   <body>
-    <%= yield %>
+    <div class="row">
+        <%= render partial: "layouts/form_home_navbar" %>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <% flash.each do |name, message| %>
+            <div class="alert <%= bootstrap_class_for(name) %>">
+              <button class="close" data-dismiss="alert">&times;</button>
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+      <%= yield %>
+    
+    </div>
+
+    <div class="row">
+        <%= render partial: "layouts/form_home_footer" %>
+    </div>
   </body>
 </html>
