--- a/HW10/online_store/app/views/categories/show.html.erb
+++ b/HW10/online_store/app/views/categories/show.html.erb
@@ -1,3 +1,7 @@
 <div class="row">
+  <%= render partial: "layouts/form_breadcrumb", locals: { breadcrumb: @category } %>
+</div>
+
+<div class="row">
   <%= render partial: "products/form_index_products" %>
 </div>
