--- a/HW11/online_store/app/views/products/show.html.erb
+++ b/HW11/online_store/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mt-3">
   <%= render partial: "layouts/form_breadcrumb", locals: { breadcrumb: @product.category } %>
 </div>
 
