--- a/HW11/online_store/app/views/products/_form_index_products.html.erb
+++ b/HW11/online_store/app/views/products/_form_index_products.html.erb
@@ -2,13 +2,14 @@
 <% @products.each do |products|%>
   <div class="col mt-3">
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <%= image_tag image_url(products.image) %>
       <div class="card-body">
-        <a href="/products/<%=products.id%>" class="card-link">name <%= products.name%></a>
+        <a href="/products/<%=products.id%>" class="card-link"><%= products.name%></a>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">цена <%= products.price%></li>
+        <li class="list-group-item">pricy <%= products.price%></li>
       </ul>
     </div>
   </div>
 <%end%>
+
