--- a/HW11/online_store/app/views/products/show.html.erb
+++ b/HW11/online_store/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row mt-3">
-  <%= render partial: "layouts/form_breadcrumb", locals: { breadcrumb: @product.category } %>
+  <%= render partial: "layouts/template/form_breadcrumb", locals: { breadcrumb: @product.category } %>
 </div>
 
 <div class="row">
