--- a/HW11/online_store/app/views/carts/show.html.erb
+++ b/HW11/online_store/app/views/carts/show.html.erb
@@ -7,7 +7,8 @@
         <th>image</th>
         <th>name</th>
         <th>quantity</th>
-        <th>pricy</th>
+        <th>price: x1</th>
+        <th>full price</th>
         <th>remove</th>
       </tr>
       <% current_cart.line_items.each do |line_item|%>
@@ -23,7 +24,8 @@
           <%= link_to "add", line_item_add_path(:id => line_item), method: :post %>
           </th>
 
-          <th><%= line_item.price * line_item.quantity %></th>
+          <th><%= number_to_currency(line_item.product.price) %></th>
+          <th><%= number_to_currency(line_item.total_price) %></th>
           <th><%= link_to "remove", line_item_path(line_item), method: :delete %></th>
         </tr>
       <%end%>
@@ -31,11 +33,12 @@
         <td></td>
         <td></td>
         <td></td>
-        <td><b>total pticy: <%= current_cart.total_price %><b></td>
+        <td></td>
+        <td><b>total ptice: <%= number_to_currency(current_cart.total_price) %><b></td>
         <td></td>
       </tr>
     </table>
-    <%= button_to 'Checkout', orders_path, class: 'btn btn-primary' %>
+
   <%else%>
     <p>currently no items in the cart</p>
   <%end%>
@@ -44,5 +47,10 @@
   <h3>Please SignIn or SignUp!</h3>
 <% end %>
 
+<% if cart_total_quantity.zero? %>
+  Cart is empty
+<% else %>
+  <%= link_to 'Checkout', new_order_path, class: 'btn btn-primary' %>
+<% end %>
 
 
