--- a/HW11/online_store/app/views/categories/show.html.erb
+++ b/HW11/online_store/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <%= render partial: "layouts/form_breadcrumb", locals: { breadcrumb: @category } %>
+  <%= render partial: "layouts/template/breadcrumb", locals: { breadcrumb: @category } %>
 </div>
 
 <div class="row">
-  <%= render partial: "products/form_index_products" %>
+  <%= render partial: "products/index_products" %>
 </div>
