--- a/HW11/online_store/app/views/layouts/application.html.erb
+++ b/HW11/online_store/app/views/layouts/application.html.erb
@@ -19,12 +19,12 @@
 
   <body>
     <div class="row">
-        <%= render partial: "layouts/template/form_home_navbar" %>
+        <%= render partial: "layouts/template/home_navbar" %>
     </div>
 
     <main class="container">
       <div class="row">
-        <%= render partial: "layouts/template/form_flash" %>
+        <%= render partial: "layouts/template/flash" %>
       </div>
 
       <%= yield %>
@@ -32,7 +32,7 @@
     </main>
 
     <div class="row">
-        <%= render partial: "layouts/template/form_home_footer" %>
+        <%= render partial: "layouts/template/home_footer" %>
     </div>
   </body>
 </html>
