--- a/HW11/online_store/app/views/layouts/template/_home_navbar.html.erb
+++ b/HW11/online_store/app/views/layouts/template/_home_navbar.html.erb
@@ -9,6 +9,7 @@
       <% if user_signed_in? %>
         <li class="nav-item"><span class="nav-link link-dark px-2">
           <%= link_to "Cart", cart_path, class: "link-dark" %>
+          <span class="total"><%= cart_total_quantity %></span>
         </span></li>
         <li class="nav-item"><span class="nav-link link-dark px-2">
           <%= link_to "log out", destroy_user_session_path, method: :delete, class: "link-dark" %>
@@ -47,6 +48,7 @@
                 <%= link_to category.title, category, class: "dropdown-item" %>
               <% end %>
             </ul>
+            <%= link_to "Orders", orders_path, class: "nav-link" %>
           </li>
         </ul>
         <form class="d-flex mt-3" role="search">
