--- a/HW11/online_store/app/views/orders/show.html.erb
+++ b/HW11/online_store/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Order #<%= @order.id %></h1>
+<h1>Order #<%= @order.id %><span class="badge <%= @order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= @order.status %></span></h1>
 
 <table class='table'>
   <tr>
@@ -6,8 +6,8 @@
     <th>image</th>
     <th>name</th>
     <th>quantity</th>
-    <th>status</th>
-    <th>price</th>
+    <th>price: x1</th>
+    <th>full price</th>
   </tr>
   <% @sum_order = 0 %>
   <% @order.cart.line_items.each_with_index do |line_item, index| %>
@@ -16,8 +16,8 @@
       <td><%= image_tag image_url(line_item.product.image), height: 100, width: 100 %> </td>
       <td><%= line_item.product.name %></td>
       <td><%= line_item.quantity %></td>
-      <td><%= @order.status %></td>
-      <td><%= line_item.product.price * line_item.quantity %></td>
+      <td><%= number_to_currency(line_item.product.price) %></td>
+      <td><%= number_to_currency(line_item.total_price) %></td>
   </tr>
   
   <tr>
@@ -26,9 +26,9 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><b>total pticy: <%= line_item.price * line_item.quantity %><b></td>
+    <td><b>total ptice: <%= number_to_currency(line_item.total_price) %><b></td>
   </tr>
-  <% @sum_order += line_item.price * line_item.quantity %>
+  <% @sum_order += line_item.total_price %>
   <% end %>
     <tr>
     <td></td>
@@ -36,6 +36,15 @@
     <td></td>
     <td></td>
     <td></td>
-    <td><b>full total pticy: <%= @sum_order %><b></td>
+    <td><b>full total ptice: <%= number_to_currency(@sum_order) %><b></td>
   </tr>
 </table>
+
+<% if @order.unpaid? %>
+  <%= button_to switch_path, method: :patch, class: "btn btn-primary" do %>
+    Proceed to payment
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-fill" viewBox="0 0 16 16">
+      <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v1H0V4zm0 3v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7H0zm3 2h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1z"/>
+    </svg>
+  <% end %>
+<% end %>
