--- a/HW11/online_store/app/views/products/_form_index_products.html.erb
+++ b/HW11/online_store/app/views/products/_form_index_products.html.erb
@@ -7,7 +7,8 @@
         <a href="/products/<%=products.id%>" class="card-link"><%= products.name%></a>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">pricy <%= products.price%></li>
+        <li class="list-group-item">pricy <%= number_to_currency(products.price)%></li>
+        <li class="list-group-item"><%= button_to "add to cart", line_items_path(product_id: products.id), class: "btn btn-primary"%></li>
       </ul>
     </div>
   </div>
