--- a/HW11/online_store/app/views/products/_form_show_products.html.erb
+++ b/HW11/online_store/app/views/products/_form_show_products.html.erb
@@ -11,7 +11,7 @@
         <p class="card-text"><small class="text-muted">test</small></p>
       </div>
         <ul class="list-group list-group-flush">
-    <li class="list-group-item">цена <%= @product.price%></li>
+    <li class="list-group-item">цена <%= number_to_currency(@product.price)%></li>
     <li class="list-group-item"><%= button_to "add to cart", line_items_path(product_id: @product.id), class: "btn btn-primary"%></li>
   </ul>
     </div>
