--- a/HW11/online_store/app/views/orders/index.html.erb
+++ b/HW11/online_store/app/views/orders/index.html.erb
@@ -1,22 +1,25 @@
-<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 380px;">
-  <div class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
-    <span class="fs-5 fw-semibold">Orders</span>
-  </div>
-  <div class="list-group list-group-flush border-bottom scrollarea">
-    <% @orders.each do |order| %>
-      <%= link_to order, class: "list-group-item list-group-item-action active py-3 mb-3 rounded lh-sm" do %>
-      <div class="d-flex w-100 align-items-center justify-content-between">
-        <strong class="mb-1">Order #<%= order.id %></strong>
-        <span class="badge <%= order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= order.status %></span>
+
+<p></p>
+<h2>Orders</h2>
+<p></p>
+<% @orders.each do |order| %>
+  <div class="card border-primary mb-3" style="max-width: 18rem;">
+    <div class="card-header">Order #<%= order.id %></div>
+    <div class="card-body text-primary">
+      <p class="card-text">Date: <%= l(order.created_at, format: :short) %></p>
+      <p class="card-text">Name: <%= order.name %></p>
+      <p class="card-text">E-mail: <%= order.email %></p>
+      <p class="card-text">Address shiping: <%= order.address %></p>
+      <p class="card-text">status: <span class="badge <%= order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= order.status %></span></p>
+      <div class="d-grid gap-2 col-6 mx-auto">
+        <%= link_to "view order", order, class: "btn btn-warning"%>
       </div>
-      <div class="mb-1">Date: <%= l(order.created_at, format: :short) %></div>
-      <div class="col-10 mb-1 small">Name: <%= order.name %></div>
-      <div class="col-10 mb-1 small">E-mail: <%= order.email %></div>
-      <div class="col-10 mb-1 small">Address shiping: <%= order.address %></div>
-      <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
+<% end %>
+
+
+
 
 
 
