--- a/HW12/online_store/app/views/products/index.html.erb
+++ b/HW12/online_store/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row">
-  <%= render partial: "products/form_index_products" %>
+  <%= render partial: "products/index_products" %>
 </div>
 
 
