--- a/HW12/online_store/app/views/products/show.html.erb
+++ b/HW12/online_store/app/views/products/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row mt-3">
-  <%= render partial: "layouts/template/form_breadcrumb", locals: { breadcrumb: @product.category } %>
+  <%= render partial: "layouts/template/breadcrumb", locals: { breadcrumb: @product.category } %>
 </div>
 
 <div class="row">
@@ -7,6 +7,6 @@
 </div>
 
 <div class="row">
-  <%= render partial: "products/form_show_products" %>
+  <%= render partial: "products/show_products" %>
 </div>
 
