--- a/HW12/online_store/app/views/orders/show.html.erb
+++ b/HW12/online_store/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Order #<%= @order.id %><span class="badge <%= @order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= @order.status %></span></h1>
+<h1>Order # <%= @order.id %><span class="badge <%= @order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= @order.status %></span></h1>
 
 <table class='table'>
   <tr>
@@ -41,7 +41,7 @@
 </table>
 
 <% if @order.unpaid? %>
-  <%= button_to switch_path, method: :patch, class: "btn btn-primary" do %>
+  <%= button_to order_path, method: :patch, class: "btn btn-primary" do %>
     Proceed to payment
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card-fill" viewBox="0 0 16 16">
       <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v1H0V4zm0 3v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7H0zm3 2h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1z"/>
