--- a/HW12/online_store/app/views/orders/show.html.erb
+++ b/HW12/online_store/app/views/orders/show.html.erb
@@ -1,43 +1,46 @@
 <h1>Order # <%= @order.id %><span class="badge <%= @order.unpaid? ? 'text-bg-secondary' : 'text-bg-success' %>"><%= @order.status %></span></h1>
 
-<table class='table'>
-  <tr>
-    <th>#</th>
-    <th>image</th>
-    <th>name</th>
-    <th>quantity</th>
-    <th>price: x1</th>
-    <th>full price</th>
-  </tr>
-  <% @sum_order = 0 %>
-  <% @order.cart.line_items.each_with_index do |line_item, index| %>
+<table class="table">
+  <thead>
     <tr>
-      <td><%= index+1 %></td>
-      <td><%= image_tag image_url(line_item.product.image), height: 100, width: 100 %> </td>
-      <td><%= line_item.product.name %></td>
-      <td><%= line_item.quantity %></td>
-      <td><%= number_to_currency(line_item.product.price) %></td>
-      <td><%= number_to_currency(line_item.total_price) %></td>
-  </tr>
-  
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td><b>total ptice: <%= number_to_currency(line_item.total_price) %><b></td>
-  </tr>
-  <% @sum_order += line_item.total_price %>
-  <% end %>
-    <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td><b>full total ptice: <%= number_to_currency(@sum_order) %><b></td>
-  </tr>
+      <th scope="col">#</th>
+      <th scope="col">image</th>
+      <th scope="col">name</th>
+      <th scope="col">quantity</th>
+      <th scope="col">price: x1</th>
+      <th scope="col">full price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @sum_order = 0 %>
+    <% @line_items.each_with_index do |line_item, index| %>
+      <tr>
+        <td><%= index+1 %></td>
+        <td><%= image_tag image_url(line_item.product.image), height: 100, width: 100 %> </td>
+        <td><%= line_item.product.name %></td>
+        <td><%= line_item.quantity %></td>
+        <td><%= number_to_currency(line_item.product.price) %></td>
+        <td><%= number_to_currency(line_item.total_price) %></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><b>total ptice: <%= number_to_currency(line_item.total_price) %><b></td>
+      </tr>
+      <% @sum_order += line_item.total_price %>
+    <% end %>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><b>full total ptice: <%= number_to_currency(@sum_order) %><b></td>
+      </tr>
+  </tbody>
 </table>
 
 <% if @order.unpaid? %>
