--- a/HW12/online_store/app/views/orders/new.html.erb
+++ b/HW12/online_store/app/views/orders/new.html.erb
@@ -1,16 +1,16 @@
 <h1>New Order</h1>
-<%= form_for(@order) do |f| %>
+<%= form_with model: @order, local: true  do |f| %>
   <p>
     <%= f.label :name %><br>
     <%= f.text_field :name, required: true, autofocus: true %>
   </p>
   <p>
     <%= f.label :email %><br>
-    <%= f.email_field :email %>
+    <%= f.email_field :email, required: true, minlength: 2, autofocus: true %>
   </p>
   <p>
     <%= f.label :address %><br>
-    <%= f.text_area :address %>
+    <%= f.text_area :address, required: true, minlength: 2, autofocus: true %>
   </p>
   <p>
     <%= f.submit %>
