--- a/HW13/online_store/app/views/orders/show.html.erb
+++ b/HW13/online_store/app/views/orders/show.html.erb
@@ -16,7 +16,7 @@
     <% @line_items.each_with_index do |line_item, index| %>
       <tr>
         <td><%= index+1 %></td>
-        <td><%= image_tag image_url(line_item.product.image), height: 100, width: 100 %> </td>
+        <td><%= image_tag(line_item.product.image, height: 100, width: 100) %> </td>
         <td><%= line_item.product.name %></td>
         <td><%= line_item.quantity %></td>
         <td><%= number_to_currency(line_item.product.price) %></td>
