--- a/HW13/online_store/app/views/products/_show_products.html.erb
+++ b/HW13/online_store/app/views/products/_show_products.html.erb
@@ -2,7 +2,7 @@
 <div class="card mb-3" style="max-width: 1200px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <%= image_tag image_url(@product.image), width: 200, height: 200 %>
+      <%= image_tag(@product.image, height: 200, width: 200)%>
     </div>
     <div class="col-md-8">
       <div class="card-body">
