mod_views_condition_check

--- a/HW13/online_store/app/views/products/_index_products.html.erb
+++ b/HW13/online_store/app/views/products/_index_products.html.erb
@@ -2,7 +2,11 @@
 <% @products.each do |products|%>
   <div class="col mt-3">
     <div class="card" style="width: 15rem;">
-      <%= image_tag(products.image, height: 235, width: 235) if products.image.attached? %>
+    <%if products.image.attached?%>
+      <%= image_tag(products.image.variant(:main), height: 235, width: 235) %>
+    <%else%>
+      <%= image_tag "zaglushka.png", height: 235, width: 235 %>
+    <%end%>  
       <div class="card-body">
         <%= link_to products.name, products%>
       </div>
