--- a/HW13/online_store/app/views/carts/show.html.erb
+++ b/HW13/online_store/app/views/carts/show.html.erb
@@ -16,7 +16,11 @@
       <tbody>
         <%@line_items.each do |line_item|%>
           <tr>
-            <th><%= image_tag(line_item.product.image, width: 100, height: 100) %></th>
+            <%if line_item.product.image.attached?%>
+              <th><%= image_tag(line_item.product.image.variant(:little), width: 100, height: 100) %></th>
+            <%else%>
+              <th><%= image_tag "zaglushka.png", width: 100, height: 100 %></th>
+            <%end%>
             <th><%= line_item.product.name %></th>
 
             <th>
