--- a/HW13/online_store/app/views/carts/show.html.erb
+++ b/HW13/online_store/app/views/carts/show.html.erb
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-        <%@line_items.each do |line_item|%>
+        <%@line_items.includes(product: :image_attachment).each do |line_item|%>
           <tr>
             <%if line_item.product.image.attached?%>
               <th><%= image_tag(line_item.product.image.variant(:little), width: 100, height: 100) %></th>
