--- a/HW13/online_store/app/views/user_mailer/order.html.erb
+++ b/HW13/online_store/app/views/user_mailer/order.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Order #<%= @order.id %> <span class="badge text-bg-success"><%= @order.status %></span></h1>
 <p>Name: <%= @order.name %></p>
-<p>Enail: <%= @order.email %></p>
+<p>Email: <%= @order.email %></p>
 <p>Address delivery: <%= @order.address %></p>
 
 <table class="table">
