--- a/HW15/online_store/app/views/carts/show.html.erb
+++ b/HW15/online_store/app/views/carts/show.html.erb
@@ -15,6 +15,7 @@
       </thead>
       <tbody>
         <%@line_items.includes(product: :image_attachment).each do |line_item|%>
+          <%= turbo_frame_tag dom_id(line_item) do %>
           <tr>
             <%if line_item.product.image.attached?%>
               <th><%= image_tag(line_item.product.image.variant(:little), width: 100, height: 100) %></th>
@@ -37,6 +38,7 @@
             <th><%= number_to_currency(line_item.total_price) %></th>
             <th><%= button_to "remove", line_item_path(line_item), method: :delete %></th>
           </tr>
+          <%end%>
         <%end%>
             <tr>
               <td></td>
