--- a/HW15/online_store/app/views/products/_index_products.html.erb
+++ b/HW15/online_store/app/views/products/_index_products.html.erb
@@ -1,20 +1,28 @@
 
-<% @products.each do |products|%>
+
   <div class="col mt-3">
     <div class="card" style="width: 15rem;">
-    <%if products.image.attached?%>
-      <%= image_tag(products.image.variant(:main), height: 235, width: 235) %>
+    <%if product.image.attached?%>
+      <%= image_tag(product.image.variant(:main), height: 235, width: 235) %>
     <%else%>
       <%= image_tag "zaglushka.png", height: 235, width: 235 %>
     <%end%>  
       <div class="card-body">
-        <%= link_to products.name, products%>
+        <%= link_to product.name, product%>
       </div>
+      <%= turbo_frame_tag dom_id(product) do %>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">pricy <%= number_to_currency(products.price)%></li>
-        <li class="list-group-item"><%= button_to "add to cart", line_items_path(product_id: products.id), class: "btn btn-primary"%></li>
-        <li class="list-group-item"><%= button_to (current_product_quantity(products.id).present?) ? "In cart" : "Add to cart", line_items_path(product_id: products.id), class: "btn btn-primary add-to-cart" %></li>
+        <li class="list-group-item">pricy <%= number_to_currency(product.price)%></li>
+        <li class="list-group-item"><%= button_to (current_product_quantity(product.id).present?) ? "In cart" : "Add to cart", line_items_path(product_id: product.id), class: "btn btn-primary add-to-cart" %></li>
+        <li class="list-group-item">
+          <div class="qty-btns d-flex">
+            <%= button_to "-", product_path(product), params: { action_item: 'decrease' }, method: :patch, class: 'btn btn-primary' %>
+            <p class="quantity"><%= (current_product_quantity(product.id).present?) ? current_product_quantity(product.id).quantity : 1 %></p>
+            <%= button_to "+", product_path(product), params: { action_item: 'increase' }, method: :patch, class: 'btn btn-primary' %>
+          </div>
+        </li>
       </ul>
+      <%end%>
     </div>
   </div>
-<%end%>
+
