--- a/HW15/online_store/app/views/products/index.html.erb
+++ b/HW15/online_store/app/views/products/index.html.erb
@@ -1,8 +1,11 @@
+<%= turbo_stream_from 'products' %>
 
 <div class="row">
   <h2 class="text-center">all products</h2>
 </div>
 
 <div class="row">
-  <%= render partial: "products/index_products" %>
+  <% @products.each do |product|%>
+    <%= render partial: "products/index_products", locals: { product: product } %>
+  <%end%>
 </div>
