--- a/HW15/online_store/app/views/products/_index_products.html.erb
+++ b/HW15/online_store/app/views/products/_index_products.html.erb
@@ -1,7 +1,7 @@
 
 
 <div class="col mt-3">
-  <%= turbo_frame_tag dom_id(product) do %>
+  
     <div class="card" style="width: 15rem;">
       <%if product.image.attached?%>
         <%= image_tag(product.image.variant(:main), height: 235, width: 235) %>
@@ -14,15 +14,9 @@
       <ul class="list-group list-group-flush">
         <li class="list-group-item">pricy <%= number_to_currency(product.price)%></li>
         <li class="list-group-item"><%= button_to (current_product_quantity(product.id).present?) ? "In cart" : "Add to cart", line_items_path(product_id: product.id), class: "btn btn-primary add-to-cart" %></li>
-        <li class="list-group-item">
-          <div class="qty-btns d-flex">
-            <%= button_to "-", product_path(product), params: { action_item: 'decrease' }, method: :patch, class: 'btn btn-primary',data: { turbo: false } %>
-            <p class="quantity"><%= (current_product_quantity(product.id).present?) ? current_product_quantity(product.id).quantity : 1 %></p>
-            <%= button_to "+", product_path(product), params: { action_item: 'increase' }, method: :patch, class: 'btn btn-primary',data: { turbo: false } %>
-          </div>
-        </li>
-      </ul>       
+        <li class="list-group-item"><%= turbo_frame_tag dom_id(product)%></li>
+      </ul>
     </div>
-  <%end%>
 </div>
+
 
